# CIEPT-R

./: .gitignore  README.md  aaai项目.md  pyproject.toml
configs/: base.yaml
configs/baselines/: recbole_base.yaml
configs/models/: local_backends.yaml
continue/: AGENT.MD  progress.md  task.json
data/: README.md
deliverables/current/: entrypoints.md  implementation_review.md  manifest.json  reproducibility_checklist.md  required_assets.md  task_snapshot.json
docs/superpowers/plans/: 2026-03-10-audit-dataset.md  2026-03-10-conflict-stress.md  2026-03-10-intervention.md  (+14 more)
scripts/: check.sh
src/ciept/: __init__.py  cli.py  config.py
tests/: test_audit_dataset.py  test_audit_gating.py  test_audit_losses.py  test_audit_merge.py  test_audit_support.py  test_baseline_bridge.py  test_baseline_formats.py  test_baseline_registry.py  test_baseline_runner.py  test_cli.py  test_config.py  test_conflict_stress_pipeline.py  test_conflict_stress_rules.py  test_data_cli.py  test_data_protocol.py  test_delivery_bundle.py  test_delivery_review.py  test_experiment_modules.py  test_experiment_runner.py  test_graph_adapters.py  test_graph_builders.py  test_graph_cache.py  test_graph_types.py  test_local_encoders.py  test_metrics_faithfulness.py  test_metrics_ranking.py  test_metrics_usage.py  test_persistence.py  test_priors_aggregate.py  test_priors_heuristics.py  test_priors_nuisance.py  test_recbole_adapter.py  test_reranker_forward.py  test_reranker_validation.py  test_train_cli.py  test_train_engine.py  test_train_losses.py  test_transport_sanity.py  test_transport_solver.py
(+89 files in other folders)
